[package]
name = "hhsh"
version = "0.1.0"
edition = "2018"
license = " GPL-3.0-or-later"
description = "hhsh tui for rust"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "2.2.0"
futures = "0.3"
serde_json = "1.0"
cli-table = "0.4"
regex = "1"
